# scylla-elixir-driver

./: .gitignore  README.md  mix.exs
lib/: scylla_elixir_driver.ex
native/scylla_bindings/: Cargo.toml  README.md
native/scylla_bindings/src/: lib.rs
test/: scylla_elixir_driver_test.exs
