[package]
name = "scylla_bindings"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "scylla_bindings"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35.0"
tokio = { version = "1", features = ["full"] }
scylla = { version = "0.14.0", features = [] }
lazy_static = "1.4.0"